--- a/src/css/base/_layout.scss
+++ b/src/css/base/_layout.scss
@@ -4,9 +4,27 @@ html {
 }
 
 .container {
+	@include grid-container;
 	width: 100%;
 	max-width: $max-width;
 	margin: 0 auto;
 
 	position: relative;
+}
+
+.tile {
+	@include grid-container;
+
+	border-bottom: 1px solid black;
+
+	.left,
+	.right {
+		@include grid-column(6);
+	}
+
+	.right {
+		img {
+			width: 100%;
+		}
+	}
 }
