--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -21,9 +21,25 @@ html {
 body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	font-size: 1.3rem;
+	font-size: 1.4rem;
 }
 
 a {
 	color: inherit;
+}
+
+h1,
+h2,
+h3 {
+	font-size: 16px;
+	font-weight: normal;
+}
+
+h2 {
+	text-decoration: underline;
+}
+
+p {
+	font-size: 1.4rem;
+	line-height: 1.4em;
 }
