--- a/src/html/views/partials/header.njk
+++ b/src/html/views/partials/header.njk
@@ -1,8 +1,3 @@
 <header>
-	<nav>
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/about-us">About Us</a></li>
-		</ul>
-	</nav>
+	<h1>Scott Blissett</h1>
 </header>
