--- a/src/html/views/partials/tile.njk
+++ b/src/html/views/partials/tile.njk
@@ -4,6 +4,6 @@
         {{ project.description | safe }}
     </div>
     <div class="right">
-        <!-- <img src="{{project.screenshot}}" alt="{{project.title}} screenshot"> -->
+        <img src="{{project.screenshot}}" alt="{{project.title}} screenshot">
     </div>
 </div>
