--- a/src/html/views/partials/meta.njk
+++ b/src/html/views/partials/meta.njk
@@ -20,3 +20,7 @@
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="http://placehold.it/1200/630" />
+
+{% settings.faviconMetaTags.forEach(tag => { %}
+    {%- tagGenerator(tag) -%}
+{% }) %}
