--- a/src/html/views/master.njk
+++ b/src/html/views/master.njk
@@ -16,7 +16,7 @@
 			{% block content %}
 			{% endblock %}
 
-			
+			{% include "partials/footer.njk" %}			
 			{% include "partials/analytics.njk" %}
 		</div>
 		<script type="text/javascript" src="js/scripts.min.js"></script>
