--- a/src/html/views/partials/meta.njk
+++ b/src/html/views/partials/meta.njk
@@ -2,7 +2,7 @@
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>absentees</title>
+<title>{{ name }}</title>
 <meta property="og:title" content="absentees"/>
 
 <meta name="description" content="absentees">
@@ -20,7 +20,3 @@
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="http://placehold.it/1200/630" />
-
-{% settings.faviconMetaTags.forEach(tag => { %}
-    {%- tagGenerator(tag) -%}
-{% }) %}
