--- a/src/css/base/_layout.scss
+++ b/src/css/base/_layout.scss
@@ -4,7 +4,7 @@ html {
 }
 
 .container {
-	@include grid-container;
+	// @include grid-container;
 	width: 100%;
 	max-width: $max-width;
 	margin: 0 auto;
@@ -14,4 +14,8 @@ html {
 
 main {
 	margin: 8rem 0;
+
+	section {
+		@include grid-container;
+	}
 }
