--- a/src/css/components/_tile.scss
+++ b/src/css/components/_tile.scss
@@ -1,11 +1,15 @@
 .tile {
-	@include grid-container;
+	@include grid-column(6);
 
-	padding: 8rem 0;
+	// padding: 8rem 0;
 
-	border-bottom: 1px solid black;
+	// border-bottom: 1px solid black;
 
 	&:first-of-type {
 		padding-top: 0;
+	}
+
+	> img {
+		width: 100%;
 	}
 }
