--- a/src/html/views/partials/tile.njk
+++ b/src/html/views/partials/tile.njk
@@ -1,5 +1,7 @@
 <div class="tile">
     <h3>{{ project.title }}</h3>
+    {% if project.screenshot %}
     <img src="{{project.screenshot}}" alt="{{project.title}} screenshot">
+    {% endif %}
     {{ project.description | safe }}
 </div>
