--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -15,7 +15,8 @@
 
 html {
 	font-size: 62.5%;
-	font-family: 'Overpass Mono', monospace;
+	// font-family: 'Overpass Mono', monospace;
+	font-family: serif;
 }
 
 body {
