--- a/src/html/views/partials/header.njk
+++ b/src/html/views/partials/header.njk
@@ -1,5 +1,5 @@
 <header>
-	<h1>{{ settings.name }}</h1>
+	<h1 class="title">{{ settings.name }}</h1>
 	<p>{{settings.description}}</p>
-	{{settings.links | safe}}
+	{{ settings.links | safe }}
 </header>
