--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -1,5 +1,5 @@
 // Typography
-@import url('https://fonts.googleapis.com/css?family=Overpass+Mono');
+@import url('https://fonts.googleapis.com/css?family=Overpass:400,700');
 
 
 // EXAMPLE FONT MIXIN
@@ -15,8 +15,7 @@
 
 html {
 	font-size: 62.5%;
-	// font-family: 'Overpass Mono', monospace;
-	font-family: serif;
+	font-family: 'Overpass', sans-serif;
 }
 
 body {
@@ -33,7 +32,7 @@ h1,
 h2,
 h3 {
 	font-size: 16px;
-	font-weight: normal;
+	font-weight: 700;
 }
 
 h2 {
