--- a/src/html/views/partials/meta.njk
+++ b/src/html/views/partials/meta.njk
@@ -2,11 +2,11 @@
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>{{ name }}</title>
+<title>{{ settings.name }}</title>
 <meta property="og:title" content="absentees"/>
 
-<meta name="description" content="absentees">
-<meta property="og:description" content="absentees" />
+<meta name="description" content="I am a designer/developer currently working with Present Company, a full service digital agency based in Redfern.">
+<meta property="og:description" content="I am a designer/developer currently working with Present Company, a full service digital agency based in Redfern." />
 
 <meta property="og:url" content="http://google.com.au" />
 
