--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -15,7 +15,8 @@
 
 html {
 	font-size: 62.5%;
-	font-family: 'Overpass', sans-serif;
+	// font-family: 'Overpass', sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -28,23 +29,13 @@ a {
 	color: inherit;
 }
 
-h1,
-h2,
-h3 {
-	font-size: 16px;
-	font-weight: 700;
-}
 
 h2 {
-	margin: 0;
-	padding-left: 1rem;
-
-	color: white;
-	background-color: black;
-	line-height: 2em;
+	letter-spacing: -1px;
+	color: black;
 }
 
 p {
-	font-size: 1.4rem;
+	font-size: 1.6rem;
 	line-height: 1.4em;
 }
