--- a/src/html/views/partials/tile.njk
+++ b/src/html/views/partials/tile.njk
@@ -1,7 +1,14 @@
 <div class="tile">
-    <h3>{{ project.title }}</h3>
-    {% if project.screenshot %}
-    <img src="{{project.screenshot}}" alt="{{project.title}} screenshot">
-    {% endif %}
-    {{ project.description | safe }}
+    <div class="header">
+        <h3>{{ project.title }}</h3>
+        {% if project.thumbnail %}
+            <img src="{{project.thumbnail}}" alt="{{project.title}} thumbnail">
+        {% endif %} 
+    </div>
+    <div class="content">
+        {% if project.screenshot %}
+            <img src="{{project.screenshot}}" alt="{{project.title}} screenshot">
+        {% endif %}
+        {{ project.description | safe }}
+    </div>
 </div>
