--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -1,5 +1,5 @@
 // Typography
-@import url('https://fonts.googleapis.com/css?family=Overpass:400,700');
+// @import url('https://fonts.googleapis.com/css?family=Overpass:400,700');
 
 
 // EXAMPLE FONT MIXIN
@@ -17,6 +17,10 @@ html {
 	font-size: 62.5%;
 	// font-family: 'Overpass', sans-serif;
 	font-family: Arial, Helvetica, sans-serif;
+
+	@media (max-width: 425px) {
+		font-size: 42.5%;
+	}
 }
 
 body {
@@ -30,6 +34,7 @@ a {
 }
 
 
+h1, 
 h2 {
 	letter-spacing: -1px;
 	color: black;
