--- a/src/html/views/home.njk
+++ b/src/html/views/home.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<section>
+{# <section>
     <h2>Selected Client Projects</h2>
 
     {% for project in projects %}
@@ -14,5 +14,5 @@
     {% for project in sideProjects %}
         {% include "partials/tile.njk" %}
     {% endfor %}
-</section>
+</section> #}
 {% endblock %}
