--- a/src/html/views/master.njk
+++ b/src/html/views/master.njk
@@ -19,6 +19,6 @@
 			{% include "partials/footer.njk" %}			
 			{% include "partials/analytics.njk" %}
 		</div>
-		<script type="text/javascript" src="js/scripts.min.js"></script>
+		{# <script type="text/javascript" src="js/scripts.min.js"></script> #}
 	</body>
 </html>
