--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -1,5 +1,5 @@
 // Typography
-// @import url('https://fonts.googleapis.com/css?family=Overpass:400,700');
+@import url('https://fonts.googleapis.com/css?family=Overpass:400,700,800');
 
 
 // EXAMPLE FONT MIXIN
@@ -15,8 +15,8 @@
 
 html {
 	font-size: 62.5%;
-	// font-family: 'Overpass', sans-serif;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Overpass', sans-serif;
+	// font-family: Arial, Helvetica, sans-serif;
 
 	@media (max-width: 425px) {
 		font-size: 42.5%;
@@ -34,10 +34,11 @@ a {
 }
 
 
-h1, 
-h2 {
-	letter-spacing: -1px;
-	color: black;
+h1 {
+	font-weight: 800;
+	line-height: 1em;
+	font-size: 50px;
+	letter-spacing: -0.05em;
 }
 
 p {
