--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -10,14 +10,10 @@
 // 		style: normal;
 // 	}
 // }
-
 // Setting default font size for rem
-
 html {
 	font-size: 62.5%;
-	font-family: 'Overpass', sans-serif;
-	// font-family: Arial, Helvetica, sans-serif;
-
+	font-family: 'Overpass', sans-serif; // font-family: Arial, Helvetica, sans-serif;
 	@media (max-width: 425px) {
 		font-size: 42.5%;
 	}
@@ -27,6 +23,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-size: 1.4rem;
+	color: #214448;
 }
 
 a {
@@ -42,6 +39,8 @@ h1 {
 }
 
 p {
-	font-size: 1.6rem;
-	line-height: 1.4em;
+	font-weight: normal;
+	line-height: 33px;
+	font-size: 18px;
+	letter-spacing: -0.03em;
 }
