--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,13 @@
 // Grid settings
 $max-width: 700px;
+
+// Mixins
+@mixin reset-box-model {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
 @import 'normalize';
 
 // Variables
