--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -25,11 +25,20 @@ a {
 h1 {
 	font-weight: 500;
 	line-height: 1em;
-	font-size: 7rem; // letter-spacing: -0.05em;
+	font-size: 5.4rem; // letter-spacing: -0.05em;
+}
+
+h2 {
+	font-weight: 500;
+}
+
+h3 {
+	font-weight: 400;
+
 }
 
 p {
 	font-weight: 400;
 	line-height: 1.4em;
-	font-size: 2.8rem; // letter-spacing: -0.03em;
+	font-size: 1.8rem; // letter-spacing: -0.03em;
 }
