--- a/src/css/components/_tile.scss
+++ b/src/css/components/_tile.scss
@@ -1,17 +1,15 @@
 .tile {
 	display: block;
 	width: 100%;
-	opacity: 0.3;
+	opacity: 0.7;
 	margin: 0.5em 0;
-
-	border-bottom: 1px black solid;
 
 	&:hover {
 		opacity: 1;
 	}
 
 	&.expand {
-		.header > img {
+		.header>img {
 			display: none;
 		}
 
@@ -23,19 +21,18 @@
 	.header {
 		cursor: pointer;
 
-		> h3, img {
+		>h3,
+		img {
 			display: inline;
-			font-size: 6.4rem;
-			line-height: 1em;
+
 		}
 
-		> h3 {
-			font-weight: 700;
+		>h3 {
+
 			margin: 0;
-			letter-spacing: -2px;
 		}
 
-		> img {
+		>img {
 			height: 0.8em;
 		}
 	}
@@ -43,7 +40,7 @@
 	.content {
 		display: none;
 
-		> img {
+		>img {
 			width: 100%;
 		}
 	}
