--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -14,7 +14,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-size: 1.4rem;
-	color: #9aaeca;
+	color: #000;
 }
 
 a {
