--- a/src/css/base/_layout.scss
+++ b/src/css/base/_layout.scss
@@ -1,7 +1,7 @@
 body,
 html {
 	@include reset-box-model;
-	background-color: #10181c;
+	background-color: #F7F7F7;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
