--- a/src/css/base/_layout.scss
+++ b/src/css/base/_layout.scss
@@ -9,9 +9,52 @@ html {
 .container {
 	box-sizing: border-box;
 	width: 100%;
-	max-width: $max-width;
+	max-width: 100%;
 	margin: 0 auto;
 	padding: 1rem 2rem;
 
 	position: relative;
+}
+
+.project {
+	display: grid;
+	grid-template-columns: 0.4fr 1.6fr 1fr 1fr;
+	grid-template-rows: 1fr;
+	grid-template-areas: "name description mobile desktop";
+	grid-area: project;
+}
+
+.name,
+.description,
+.mobile,
+.desktop {
+	padding: 1em;
+	
+	border-left: 1px solid black;
+	border-top: 1px solid black;
+}
+
+.name {
+	grid-area: name;
+	word-break: break-word;
+}
+
+.description {
+	grid-area: description;
+}
+
+.mobile,
+.desktop {
+	img {
+		width: 100%;
+	}
+}
+
+.mobile {
+	grid-area: mobile;
+}
+
+.desktop {
+	grid-area: desktop;
+	border-right: 1px solid black;
 }
