--- a/src/html/views/master.njk
+++ b/src/html/views/master.njk
@@ -11,7 +11,6 @@
 	{% include "partials/analytics.njk" %}
 	{% include "partials/meta.njk" %}
 	<link rel="stylesheet" href="/css/main.css">
-
 </head>
 
 <body>
@@ -22,6 +21,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div class="container">
 		{% include "partials/header.njk" %} {% block content %} {% endblock %} {% include "partials/footer.njk" %} 
 	</div>
+	<script src="/js/scripts.min.js"></script>
 </body>
 
 </html>
