--- a/src/html/views/home.njk
+++ b/src/html/views/home.njk
@@ -9,17 +9,17 @@
 	</div>
 	<div class="projects">
 		{% for project in projects %}
-		<div class="project">
+		<div id="{{project.id}}"  class="project">
 			<div class="name">
 				<h3>{{ project.title }}</h3>
 			</div>
+            <div class="expand-container"><button class="expand" data-project="{{ project.id }}">Expand</button></div>
 			<div class="description">{{ project.description | safe }}
 			</div>
 			<div class="screenshots">{% if project.screenshots %}
 				{% for screenshot in project.screenshots %}
 				<div class="screenshot">
                     <img src="{{screenshot}}" alt="{{project.title}} screenshot">
-                    <span>This is a screenshot of what this image is about to explain it to the viewer.</span>
                 </div>
 				{% endfor%}
 				{% endif %}</div>
